# chitalishta-izsledvane-ai-chat

./: .dockerignore  .editorconfig  .env.example  .gitignore  API_USAGE.md  CHAT_LOGGING.md  Chitalishta_demo_ver2.docx  DOCKER.md  Dockerfile  EVALUATION.md  IMPLEMENTATION_PLAN.md  INTERNAL_API_USAGE.md  OBSERVABILITY.md  RAG_FALLBACK_FEATURE.md  RAG_SAMPLE_QUESTIONS.md  README.md  docker-compose.dev.yml  docker-compose.override.example.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  verify_models.py
.cursor/: settings.json
app/: main.py
app/api/: admin.py  admin_schemas.py  auth.py  auth_schemas.py  chat.py  chat_schemas.py  chitalishte.py  indexing.py  ingestion.py  schemas.py  vector_store.py
app/core/: auth.py  config.py  jwt.py  logging_config.py  metrics.py  middleware.py
app/db/: __init__.py  database.py  models.py  repositories.py
app/rag/: __init__.py  chat_memory.py  embeddings.py  hallucination_control.py  hybrid_pipeline.py  hybrid_router.py  indexing.py  intent_classification.py  langchain_callbacks.py  langchain_integration.py  llm_intent_classification.py  llm_registry.py  rag_chain.py  sql_agent.py  structured_output.py  vector_store.py
app/services/: assembly.py  chat_logger.py  chat_logger_callbacks.py  cost_calculator.py  document_processor.py  evaluation.py  extraction.py  rate_limiter.py  transformation.py
scripts/: add_cost_columns_to_chat_logs.py  analyze_logs.py  create_baseline_queries_table.py  create_chat_logs_table.py  create_rate_limiting_tables.py  create_user.py  create_users_table.py  init_chroma_db.py  init_db.py  verify_embeddings.py  verify_hybrid_router.py  verify_llm_intent.py
tests/: README.md  conftest.py  test_admin_endpoints.py  test_analysis_document_ingestion.py  test_auth.py  test_chat_endpoint.py  test_evaluation.py  test_hallucination_control.py  test_hybrid_pipeline.py  test_hybrid_router.py  test_indexing.py  test_ingestion_preview.py  test_intent_classification.py  test_langchain_integration.py  test_llm_intent_classification.py  test_llm_registry.py  test_rag_chain.py  test_sql_agent.py  test_structured_output.py
